# milandr-template

./: .gitignore  .gitmodules  CMakeLists.txt  openocd.cfg
emdr1986x-std-per-lib/CMSIS/CM1/DeviceSupport/MDR1986VE1T/startup/arm/: startup_MDR1986VE1T.s
emdr1986x-std-per-lib/Config/: MDR32F9Qx_config.h
emdr1986x-std-per-lib/MDR1986BE4_StdPeriph_Driver/inc/: MDR32F9Qx_eeprom.h
emdr1986x-std-per-lib/MDR32F9Qx_StdPeriph_Driver/inc/: MDR32F9Qx_eeprom.h
emdr1986x-std-per-lib/MDR32F9Qx_StdPeriph_Driver/src/: MDR32F9Qx_eeprom.c
inc/: Application.h  LcdKs0108.h  MDR32F9Qx_board.h  Pin.h  common.h
src/: Application.cpp  LcdKs0108.cpp  Pin.cpp  common.c  main.cpp
